tests/fixtures/errors/missing_main.cpp
// Test: no main function
int foo() { return 42; }
